--- a/cv.css
+++ b/cv.css
@@ -1,64 +1,78 @@
-.images_petit {
-width:300px;
-height:150px;
-float: right;}
-.progress-bar
- {
-    width: 190px;
-    height: 20px;
-    padding: 3px;
-    background-color: #191919;
-    border-radius: 16px;
-    -webkit-border-radius: 16px;
-    -moz-border-radius: 16px;
-    box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
-    -webkit-box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
-    -moz-box-shadow: inset 0 1px 2px #000, 0 1px 0 #2b2b2b;
-  }
-.progress-bar:before {
-  content: '';
-  display: block;
-  position: absolute;
-  width: 100px;
-  height: 20px;
-  background: #999;
-  border-radius: 12px;
-  -webkit-border-radius: 12px;
-  -moz-border-radius: 12px;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
-  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), inset 0 -1px 3px rgba(0, 0, 0, 0.4), 0 1px 1px #000;
-  }
-.progress-bar:after {
-    content: '|||||||||||||||||';
-    display: block;
-    position: absolute;
-    width: 200px;
-    height: 20px;
-    overflow: hidden;
-    border-radius: 12px;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    transform: skewX(-30deg);
-    -webkit-transform: skewX(-30deg);
-    -moz-transform: skewX(-30deg);
-    -o-transform: skewX(-30deg);
-    font: bold 120px/80px sans-serif;
-    letter-spacing: -6px;
-    color: #000;
-    opacity: 0.20;
-  }
-.blue:before {
-  background: #100;
-  background: -moz-linear-gradient(top, #099, #006A6B);
-}
 .Compétence {
   float: right;
 }
 body {
   background-size: cover;
-  background-image: url(https://images7.alphacoders.com/927/thumb-1920-927080.jpg);
+  background-image: url(https://images8.alphacoders.com/503/thumb-1920-503792.jpg);
+  font-family: 'Pirata One', cursive;
 }
-body {
-
+html {
+  font-size: xx-large;
 }
+h1 {
+  text-align: center;
+}
+progress {
+    width:250px;
+    padding:1px;
+    background-color:white;
+    border:1px solid black;
+    height:28px;
+  }
+  .planet{
+    width:300px;
+    height:300px;
+    position:absolute;
+    border-radius:50%;
+    overflow:hidden;
+    box-shadow: 0 0 60px -20px #251303, -14px -15px 40px -10px #251303;
+    left:77%;
+    top:-8%;
+    margin:100px;
+  }
+  .planet .mask{
+    width:100%;
+    height:100%;
+    position: absolute;
+    box-shadow:inset -10px -10px 40px #251303, inset 10px 10px 30px -10px #251303;
+    border-radius:50%;
+  }
+  .planet .background{
+    animation: translateBackground 10s infinite linear;
+    background:url(moi.jpg) repeat-x;
+    width:300px;
+    height:300px;
+    position:absolute;
+    border-radius:50%;
+  }
+  .planet .clouds{
+    background:url(http://artem.anmedio.ru/dev/planet/clouds.png) repeat-x;
+    width:300px;
+    height:300px;
+    position:absolute;
+    border-radius:50%;
+    animation: translateBackground 10s infinite linear;
+    opacity: 0.0;
+  }
+  .planet .wrap{
+    width:300px;
+    height:300px;
+    position:absolute;
+    border-radius:50%;
+    animation: rotatePlanet infinite linear;
+  }
+  @keyframes translateBackground{
+    0%{
+      background-position-x:0;
+    }
+    100%{
+      background-position-x:-500px;
+    }
+  }
+  @keyframes rotatePlanet{
+    0%{
+      transform:rotateZ(0);
+    }
+    100%{
+      transform:rotateZ(-360deg);
+    }
